+ -> Addition
^ -> Change
- -> Removed
! -> Note

25-Mar-2013 Michael Babker
 # [#30375] When state is changed in a list view it isn't changed in core_content
 # Incorrect field names used in JTableContenttype (discovered implementing unit tests)
 # [#30382] Fatal error in mod_weblinks.  Thanks Elin
 ^ [#30142] Add optional class param to accordion slider.  Thanks Anderson

24-Mar-2013 Mark Dexter
 # [#30223] TAGS: Missing 'Help' Button in Toolbar.
 # [#30366] Help Screens, key wrong, missing or not created correctly.
 # [#30335] Updated Front-end Tags Layout. Thanks David.

24-Mar-2013 Michael Babker
 + [#30318] Pull in media wiki package from platform.  Thanks Elin
 ^ [#30356] Update JImage to latest platform version.  Thanks Don
 # [#30266] Array to string conversion in smart search.  Thanks Edgars
 # [#28978] Smart search (com_finder) - problem when using "Allow Empty Search".  Thanks Valentin
 # [#30338] Wrong contact items publishing state from Contact details > state.  Thanks Piotr
 + [#30369] Pull in OpenStreetMap package from the platform.  Thanks Elin
 + [#30364] Add UNION ALL feature from platform.  Thanks Elin
 ^ [#30180] argument three in phpdoc should be the variable name.  Thanks Alexander
 ^ [#30365] Fix code style in admin modules: mod_login.  Thanks Javier
 # [#30260] Fix for Undefined index: custom_position.  Thanks Peter
 ^ [#30363] Fix code style in admin modules: mod_logged.  Thanks Javier
 # [#29353] Smart Search Module Not Using Selected Filter.  Thanks Sam
 # [#30214] JLog::add in JFolder::create logs erroneous error messages
 ^ [#30286] Corrections to SQL Server DDL.  Thanks Sam

24-Mar-2013 Jean-Marie Simonet
 # [#30234] Route work classes for Tags. Thanks Elin

23-Mar-2013 Jean-Marie Simonet
 # [#30361] Chosen minified and un-minified versions are different. Thanks Roberto
 # [#30348] Popular Tags Module showing multiple copies of links. Thanks Elin
 # [#30351] State and language filtering not presesnt in Similar Tag module. Thanks Elin.