@@ -1,143 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<metadata>
-	<layout title="com_tags_tags_view_compact_title" option="com_tags_tag_view_list_compact_option">
-		<help
-			key="JHELP_MENUS_MENU_ITEM_TAG"
-		/>
-		<message>
-			<![CDATA[com_tags_tags_view_compact_desc]]>
-		</message>
-	</layout>
-	<!-- Add fields to the request variables for the layout. -->
-	<fields name="request">
-		<fieldset name="request">
-			<field name="parent_id" type="tag" mode="nested"
-				description="COM_TAGS_FIELD_PARENT_TAG_DESC"
-				label="COM_TAGS_FIELD_PARENT_TAG_LABEL">
-				<option value="">JNONE</option>
-			</field>
-			<field name="tag_list_language_filter"
-				type="contentlanguage"
-				default=""
-				label="COM_TAGS_FIELD_LANGUAGE_FILTER_LABEL"
-				description="COM_TAGS_FIELD_LANGUAGE_FILTER_DESC">
-					<option value="">JGLOBAL_USE_GLOBAL</option>
-					<option value="all">JALL</option>
-					<option value="current_language">JCURRENT</option>
-			</field>
-		</fieldset>
-
-	</fields>
-	<!-- Add fields to the parameters object for the layout. -->
-	<fields name="params">
-		<fieldset name="basic">
-			<field
-				name="tags_layout" type="componentlayout"
-				label="JGLOBAL_FIELD_LAYOUT_LABEL"
-				description="JGLOBAL_FIELD_LAYOUT_DESC"
-				menuitems="true"
-				extension="com_tags"
-				view="tags"
-			/>
-
-			<field name="all_tags_show_description_image" type="list"
-				description="COM_TAGS_SHOW_ALL_TAGS_IMAGE_DESC"
-				label="COM_TAGS_SHOW_ALL_TAGS_IMAGE_LABEL"
-			>
-				<option value="">JGLOBAL_USE_GLOBAL</option>
-				<option value="0">JHIDE</option>
-				<option value="1">JSHOW</option>
-			</field>
-
-			<field name="all_tags_description_image" type="media"
-				description="COM_TAGS_ALL_TAGS_MEDIA_DESC"
-				label="COM_TAGS_ALL_TAGS_MEDIA_LABEL"
-			/>
-
-			<field name="all_tags_show_description" type="list"
-				description="COM_TAGS_SHOW_ALL_TAGS_DESCRIPTION_DESC"
-				label="COM_TAGS_SHOW_ALL_TAGS_DESCRIPTION_LABEL"
-			>
-				<option value="">JGLOBAL_USE_GLOBAL</option>
-				<option value="0">JHIDE</option>
-				<option value="1">JSHOW</option>
-			</field>
-
-			<field name="all_tags_description" type="textarea"
-				description="COM_TAGS_ALL_TAGS_DESCRIPTION_DESC"
-				label="COM_TAGS_SHOW_ALL_TAGS_DESCRIPTION_LABEL"
-				class="inputbox"
-				rows="3" cols="30" filter="safehtml"
-			/>
-
-			<field name="all_tags_orderby"
-				type="list"
-				default="title"
-				label="JGLOBAL_FIELD_FIELD_ORDERING_LABEL"
-				description="JGLOBAL_FIELD_FIELD_ORDERING_DESC">
-					<option value="">JGLOBAL_USE_GLOBAL</option>
-					<option value="title">JGLOBAL_TITLE</option>
-					<option value="hits">JGLOBAL_HITS</option>
-					<option value="created_date">JGLOBAL_CREATED_DATE</option>
-					<option value="modified_date">JGLOBAL_MODIFIED_DATE</option>
-					<option value="publish_up">JGLOBAL_PUBLISHED_DATE</option>
-			</field>
-
-			<field name="all_tags_orderby_direction" type="list"
-				description="JGLOBAL_ORDER_DIRECTION_DESC"
-				label="JGLOBAL_ORDER_DIRECTION_LABEL"
-				default="ASC"
-			>
-				<option value="">JGLOBAL_USE_GLOBAL</option>
-				<option value="ASC">JGLOBAL_ORDER_ASCENDING</option>
-				<option value="DESC">JGLOBAL_ORDER_DESCENDING</option>
-			</field>
-			<field
-				name="maximum"
-				type="text"
-				default="200"
-				filter="integer"
-				label="COM_TAGS_LIST_MAX_LABEL"
-				description="COM_TAGS_LIST_MAX_DESC">
-			</field>
-
-			<field
-				name="compact_columns"
-				type="text"
-				default="4"
-				filter="integer"
-				label="COM_TAGS_COMPACT_COLUMNS_LABEL"
-				description="COM_TAGS_NUMBER_COLUMNS_DESC">
-			</field>
-
-			<field name="show_pagination" type="list"
-				description="JGLOBAL_PAGINATION_DESC"
-				label="JGLOBAL_PAGINATION_LABEL"
-			>
-				<option value="">JGLOBAL_USE_GLOBAL</option>
-				<option value="0">JHIDE</option>
-				<option value="1">JSHOW</option>
-				<option value="2">JGLOBAL_AUTO</option>
-			</field>
-
-			<field name="show_pagination_results" type="list"
-				label="JGLOBAL_PAGINATION_RESULTS_LABEL"
-				description="JGLOBAL_PAGINATION_RESULTS_DESC">
-					<option value="">JGLOBAL_USE_GLOBAL</option>
-					<option value="0">JHIDE</option>
-					<option value="1">JSHOW</option>
-			</field>
-		</fieldset>
-		<fieldset name="integration">
-			<field name="show_feed_link" type="list"
-				description="JGLOBAL_SHOW_FEED_LINK_DESC"
-				label="JGLOBAL_SHOW_FEED_LINK_LABEL"
-			>
-				<option value="">JGLOBAL_USE_GLOBAL</option>
-				<option value="0">JHIDE</option>
-				<option value="1">JSHOW</option>
-			</field>
-
-		</fieldset>
-	</fields>
-</metadata>
