@@ -30,6 +30,7 @@ $ -> Language fix or change
  # Incorrect field names used in JTableContenttype (discovered implementing unit tests)
  # [#30382] Fatal error in mod_weblinks.  Thanks Elin
  ^ [#30142] Add optional class param to accordion slider.  Thanks Anderson
+ - [#30387] Remove compact.xml.  Thanks Elin
 
 24-Mar-2013 Mark Dexter
  # [#30223] TAGS: Missing 'Help' Button in Toolbar.
